# server/router/center/center.go
@@ -33,6 +33,7 @@ func (s *CenterRouter) InitCenterAuthRouter(Router *gin.RouterGroup) {
 		houseRouter.GET("options", resourceApi.FilterOptions)
 		houseRouter.POST("house/create", resourceApi.Create)
 		houseRouter.GET("house/view", resourceApi.View)
+		houseRouter.GET("house/mobile", resourceApi.GetMobile)
 		houseRouter.POST("house/xiaoquAgg", resourceApi.ListByXiaoquAgg)
 		houseRouter.POST("house/listByXiaoqu", resourceApi.ListByXiaoquId)
 		houseRouter.POST("house/my", resourceApi.ListByUserId)
